--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 click==8.0.1
 colorama==0.4.4
-flask==2.0.1
+Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
