--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
-flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
 gunicorn==20.1.0
+idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
 MarkupSafe==2.0.1
 nltk==3.6.2
+pyTelegramBotAPI==3.8.2
 regex==2021.7.6
+requests==2.26.0
 SQLAlchemy==1.4.22
 tqdm==4.61.2
+urllib3==1.26.6
 Werkzeug==2.0.1
